# zoz

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
docs/: READAME.md
test/: CMakeLists.txt  test.h  test_token.c
zoz/: CMakeLists.txt  ast.c  ast.h  compiler.c  compiler.h  main.c  opcode.h  token.c  token.h  tools.c  tools.h  vm.c  vm.h  zoz.c  zoz.h
