set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${PROJECT_SOURCE_DIR}/bin/release)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${PROJECT_SOURCE_DIR}/bin/debug)

file(GLOB ZOZ_SRC *.c)

add_executable(${PROJECT_NAME} ${ZOZ_SRC})

list(REMOVE_ITEM ZOZ_SRC "main.c")

add_library(${PROJECT_NAME}_test_lib ${ZOZ_SRC})